• Fixes issue where card would go outside its container, causing the cards to overlap one another

--- a/anime-archive/src/components/characterButton/characterButton.css
+++ b/anime-archive/src/components/characterButton/characterButton.css
@@ -1,10 +1,9 @@
 .characterCarouselCard {
   align-items: center;
   display: flex;
-  margin: 2%;
   border-radius: 15px;
-  margin-right: 5%;
-  min-width: 300px;
+  width: 300px;
+  margin: 2%;
   height: 100px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
 }
